Add totalInstallments attribute to MonthlyRelease DTO
Co-authored-by: gabriel-hawerroth <74272106+gabriel-hawerroth@users.noreply.github.com>